// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incrementAsync 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU_ITEM",
    ],
    Array [
      "index",
      300,
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          "Increment Async",
        ],
        "props": Object {
          "f": Array [
            Array [
              "onClick",
              Object {
                "r": 0,
              },
            ],
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
  "x": Array [
    Object {
      "$": "Bind",
      "args": Array [
        Object {
          "$": "extrasDispatch",
        },
      ],
      "f": Array [
        Array [
          "prototype",
          Object {
            "f": Array [
              Array [
                "constructor",
                Object {
                  "r": 0,
                },
                2,
              ],
            ],
          },
          3,
        ],
      ],
      "func": Object {
        "$": "runIncrementAsync",
      },
      "self": Object {
        "$": "undefined",
      },
    },
  ],
}
`;

exports[`incrementIfOdd 1`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU_ITEM",
    ],
    Array [
      "index",
      400,
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          "Increment if odd",
        ],
        "props": Object {
          "f": Array [
            Array [
              "onClick",
              Object {
                "r": 0,
              },
            ],
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
  "x": Array [
    Object {
      "$": "Bind",
      "args": Array [
        Object {
          "$": "extrasDispatch",
        },
        "INCREMENT",
        Object {
          "$": "undefined",
        },
      ],
      "f": Array [
        Array [
          "prototype",
          Object {
            "f": Array [
              Array [
                "constructor",
                Object {
                  "r": 0,
                },
                2,
              ],
            ],
          },
          3,
        ],
      ],
      "func": Object {
        "$": "_signal",
      },
      "self": null,
    },
  ],
}
`;

exports[`incrementIfOdd 2`] = `
Object {
  "f": Array [
    Array [
      "type",
      "MENU_ITEM",
    ],
    Array [
      "index",
      400,
    ],
    Array [
      "value",
      Object {
        "$": "ReactElement",
        "children": Array [
          "Increment if odd",
        ],
        "props": Object {
          "f": Array [
            Array [
              "onClick",
              Object {
                "$": "nop",
              },
            ],
            Array [
              "children",
              Object {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
}
`;
